Spring Boot alignment: DTOs, MapStruct, GlobalExceptionHandler, MockMvc tests, CI (#127)
* Initial plan for Spring Boot alignment task

Agent-Logs-Url: https://github.com/Preponderous-Software/viron/sessions/470d9365-95a3-40b1-94d1-c94066faa997

Co-authored-by: dmccoystephenson <21204351+dmccoystephenson@users.noreply.github.com>

* Add DTOs, MapStruct mappers, GlobalExceptionHandler, @Validated controllers

Agent-Logs-Url: https://github.com/Preponderous-Software/viron/sessions/470d9365-95a3-40b1-94d1-c94066faa997

Co-authored-by: dmccoystephenson <21204351+dmccoystephenson@users.noreply.github.com>

* Rewrite EntityControllerTest to use MockMvc with @SpringBootTest

Replaced direct controller method calls with MockMvc.perform() HTTP
requests. Uses @SpringBootTest + @AutoConfigureMockMvc for full Spring
context, @MockBean for EntityRepository, EntityFactory, EntityMapper,
DbInteractions, and DbConfig.

Tests cover:
- Happy paths for all 9 endpoints
- 404 not-found cases for getById, delete, updateName
- 500 error cases where repository throws RuntimeException
- 201 Created for entity creation
- 204 No Content for deletion
- 400 Bad Request for EntityCreationException
- Empty list responses
- JSON response body shape validation for DTOs and ErrorResponse

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

Co-authored-by: dmccoystephenson <21204351+dmccoystephenson@users.noreply.github.com>

* Rewrite GridControllerTest to use MockMvc with @SpringBootTest

Replace direct controller method calls with MockMvc.perform(...) using
@SpringBootTest + @AutoConfigureMockMvc. Use @MockBean for GridRepository,
GridMapper, DbInteractions, and DbConfig. Test all endpoints including
happy paths, not-found cases (404), exception cases (500), and empty
list scenarios with JSON body assertions.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

Co-authored-by: dmccoystephenson <21204351+dmccoystephenson@users.noreply.github.com>

* Rewrite Locat